# libsrs2xx

./: .gitignore  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac
m4/: ax_check_openssl.m4
src/: Makefile.am  base.cpp  base64.hpp  guarded.cpp  reversible.cpp  shortcut.cpp  split.cpp
src/srs2/: address.hpp  base.hpp  guarded.hpp  reversible.hpp  shortcut.hpp  split.hpp  srs2.hpp
test/: Makefile.am  base.cpp  basic.cpp  caseless.cpp  guarded.cpp  reversible.cpp  run.cpp  separator.cpp  shortcut.cpp  varysep.cpp
test/fixtures/: addresses.hpp
